# rules_cudnn

./: .gitignore  MODULE.bazel
cudnn/: BUILD.local_cudnn  cudnn.bzl  repositories.bzl
examples/: MODULE.bazel
examples/basic/: BUILD.bazel
